ACLOCAL_AMFLAGS = -I m4

SUBDIRS = lib tools tests

pkgconfigdir = ${libdir}/pkgconfig
pkgconfig_DATA = marisa.pc

EXTRA_DIST = \
  bindings/Makefile \
  bindings/perl/Makefile.PL \
  bindings/perl/marisa.pm \
  bindings/python/setup.py \
  bindings/python/marisa.py \
  bindings/ruby/extconf.rb \
  bindings/*.cxx \
  bindings/*.h \
  bindings/*.i \
  bindings/*/*.cxx \
  bindings/*/*.h \
  bindings/*/sample.* \
  docs/*.html \
  docs/*.css \
  vs2008/vs2008.* \
  vs2008/*/*
